--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
             <div class="hero-content">
                 <h1>Elegant Accessories for Every Occasion</h1>
                 <p>Discover our exquisite collection of handcrafted jewelry and accessories that add the perfect finishing touch to your style.</p>
-                <a href="#products" class="btn btn-primary">Explore Collection <div class="ids">
-        <p class="idead"></p>
-    </div>  </a>
+                <a href="#products" class="btn btn-primary">
+    Explore Collection
+   
+</a>
+
             </div>
             <div class="hero-image">
                 <!-- <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a8ca0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=100" alt="Elegant jewelry collection"> -->
@@ -262,12 +264,8 @@
 
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
-
+  
     <script src="script.js"></script>
-    <script>
-        let a =  window.innerHeight
-        document.getElementById('idead').innerText =a + '' + window.innerWidth
-
-    </script>
+  
 </body>
 </html>
