--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#products">Shop</a></li>
                 <li><a href="#categories">Collections</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li id="authLink">
                     <a href="login.html" id="loginLink">Login</a>
                     <a href="#" id="logoutLink" style="display: none;">Logout</a>
