--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumina - Elegant Accessories</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap">
-    <link rel="stylesheet" href="style.css">
+       <!-- Base & Global Styles -->
+    <link rel="stylesheet" href="style/base.css">
+
+    <!-- Section-specific Styles -->
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/hero.css">
+    <link rel="stylesheet" href="style/categories.css">
+    <link rel="stylesheet" href="style/products.css">
+    <link rel="stylesheet" href="style/features.css">
+    <link rel="stylesheet" href="style/cart.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/login.css">
+    <link rel="stylesheet" href="style/notification.css">
+    <link rel="stylesheet" href="style/contact.css">
+
+    <!-- Responsive Styles (Always Last) -->
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
     
@@ -219,8 +235,8 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
-                        <li>123 Jewelry Lane, Fashion City</li>
-                        <li>+1 (555) 123-4567</li>
+                        <li>Bhaisepati, Lalitpur</li>
+                        <li>9762288610</li>
                         <li>info@luminajewelry.com</li>
                     </ul>
                 </div>
