--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Lumina</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/contact.css">
 </head>
 <body>
     
@@ -81,7 +81,7 @@
                         </svg>
                         <div>
                             <h4>Address</h4>
-                            <p>123 Jewelry Lane, Fashion City, FC 12345</p>
+                            <p>Bhaisepati, Lalitpur</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -90,7 +90,7 @@
                         </svg>
                         <div>
                             <h4>Phone</h4>
-                            <p>+1 (555) 123-4567</p>
+                            <p>9762288610</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -143,18 +143,22 @@
     </section>
 
     <!-- Map Section -->
-    <section class="map-section">
-        <div class="container">
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.215256009987!2d-73.98811772426648!3d40.74844097138972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ0JzU0LjQiTiA3M8KwNTknMDkuNyJX!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" 
-                        width="100%" 
-                        height="450" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy"></iframe>
-            </div>
-        </div>
-    </section>
+<section class="map-section">
+  <div class="container">
+    <h3 style="text-align:center; margin-bottom:10px;">Lumina</h3>
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps?q=27.652072281093744,85.30525422096335&hl=en&z=18&output=embed"
+        width="100%"
+        height="450"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+</section>
 
     <!-- Footer -->
     <footer>
@@ -214,8 +218,8 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
-                        <li>123 Jewelry Lane, Fashion City</li>
-                        <li>+1 (555) 123-4567</li>
+                        <li>Bhaisepati</li>
+                        <li>9762288610</li>
                         <li>info@luminajewelry.com</li>
                     </ul>
                 </div>
