--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Lumina</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/login.css">
 </head>
 <body>
     <div class="login-container">
