--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Lumina</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap">
+         <link rel="stylesheet" href="style/base.css">
+
+    <!-- Section-specific Styles -->
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/hero.css">
+    <link rel="stylesheet" href="style/categories.css">
+    <link rel="stylesheet" href="style/products.css">
+    <link rel="stylesheet" href="style/features.css">
+    <link rel="stylesheet" href="style/cart.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/login.css">
+    <link rel="stylesheet" href="style/notification.css">
     <link rel="stylesheet" href="style/contact.css">
+    
+
+    <!-- Responsive Styles (Always Last) -->
+    <link rel="stylesheet" href="style/responsive.css">
+
 </head>
 <body>
     
